# equalearn.ai

./: .gitignore  .replit  CONTRIBUTING.md  GITHUB_SETUP.md  LAUNCH.md  LICENSE  QUICK_START.md  README.md  SECURITY.md  USAGE_GUIDE.md  app.py  config.py  install_dependencies.sh  main.py  pyproject.toml  replit.md  requirements.txt  run_server.py  start.bat  start.sh
attached_assets/: Pasted--Solvely-ai-HTML-JS-CSS-KaTeX-LaTeX-Python-1754465084545_1754465084545.txt
static/: app.js  style.css
templates/: index.html
